# antilink

./: LICENSE  README.md  pyproject.toml
antilink/: main.py
antilink/test/: test_main.py
